# SegsEngine

./: CMakeLists.txt
core/: CMakeLists.txt  callable.cpp  callable.h  class_db.cpp  class_db.h  color.cpp  color.h  dictionary.cpp  dictionary.h  engine.cpp  engine.h  error_macros.h  flags.h  forward_decls.h  global_constants.cpp  image.cpp  image.h  image_data.h  message_queue.cpp  method_bind.cpp  method_bind.h  method_bind_interface.h  node_path.cpp  node_path.h  object.cpp  object.h  object_id.h  packed_data_container.h  project_settings.cpp  project_settings.h  ref_ptr.cpp  ref_ptr.h  reference.h  reflection_macros.h  register_core_types.cpp  resource.cpp  resource.h  resource_manifest.cpp  resource_manifest.h  resource_path.cpp  (+24 more)
editor/: animation_bezier_editor.cpp  animation_track_editor.cpp  animation_track_editor.h  animation_track_editor_plugins.cpp  array_property_edit.cpp  connections_dialog.cpp  dependency_editor.cpp  dependency_editor.h  dictionary_property_edit.cpp  editor_audio_buses.cpp  editor_autoload_settings.cpp  editor_data.cpp  editor_data.h  editor_export.h  editor_file_system.cpp  editor_file_system.h  editor_folding.cpp  editor_folding.h  editor_help.cpp  editor_inspector.cpp  editor_node.cpp  editor_node.h  editor_profiler.cpp  editor_properties.cpp  editor_resource_preview.cpp  editor_resource_preview.h  editor_run_script.cpp  editor_settings.cpp  editor_settings.h  editor_sub_scene.cpp  editor_themes.cpp  (+22 more)
utils/soc/tests/: CMakeLists.txt  tst_namespace.cpp
utils/soc/tests/test_cases/: class_properties.h  class_properties.json
(+330 files in other folders)
